app page images align fixed

--- a/client/app/site/apps/show/app-page.less
+++ b/client/app/site/apps/show/app-page.less
@@ -86,11 +86,13 @@
     }
     .app-screens-container{
         .app-screen-img{
-            margin-bottom: 30px;
+            margin-right: 30px;
+            float: left;
         }
         img{
             background:#e8e8e8;
             width: 100%;
+            max-width: 264px;
         }
     }
     .app-page-detail{
